scripts/nullness/annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8.txt
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java:91: error: cannot find symbol
    @Initializer @SuppressWarnings("unchecked")
     ^
  symbol:   class Initializer
  location: class PokemonMoveset
Note: ../annotator/url6dc6a3bff8_JasonxJiang_PokemonEvolutionaryAlgorithm_tgz-pJ8-ee_ea_pkg1_EEEA1J8/src/ee/ea/pkg1/PokemonMoveset.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
